--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -399,7 +399,7 @@
                 if (item.ThumbList != null && item.ThumbList.length > 0) {
                     img = '<img src="' + item.ThumbList[0] + '"  class="GG_B5Tu">'
                 }
-                html = '  <div class="GG_Box GG_Box1">'
+                html = '  <div class="GG_Box GG_Box1 PD3">'
                + ' <a href="' + item.TransferUrl + '">' + img + '</a>'
                + '   </div>'
             }
