--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -189,7 +189,7 @@
 
                                             if (countFor6 == 6)
                                             {
-                                                <span class="Mif_jgC">+</span>
+                                                <span class="Mif_jgC HYJP_PcHao">+</span>
                                             }
 
                                         }
