修复编辑投注后计算注数不正确的问题，修复投注页面彩种倒计时问题。

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -1098,6 +1098,7 @@
             var lType = $('#lType').val();
 
             var target;
+            var targetName;
 
             $.post('/Plan/AlreadyPostData', { id: lType }, function (data) {
 
@@ -1107,14 +1108,37 @@
                     var playName = d.BigPlayName;
                     var betNum = d.BetNum;
 
-                    target = $('.WanFa_TableA h3:contains(' + playName + ')').parent().next();
-                    var html = target.html();
-                    if (html == '') {
-                        target.html(betNum);
+                    if (d.lType == 5) {
+                        if (d.BigPlayName == "二十码中特" || d.BigPlayName == "十码中特" || d.BigPlayName == "平五码" || d.BigPlayName == "五不中" || d.BigPlayName == "六不中") {
+                            var betNumArr = betNum.split(',');
+                            var betNumResArr = [];
+                            $.each(betNumArr, function(index, item) {
+
+                                var num = GetColorByLhc(item);
+                                betNumResArr.push(num);
+                            });
+                            betNum = betNumResArr.join(' ');
+                        }
                     }
-                    else {
-                        target.html(html + '|' + betNum);
-                    }
+
+                    targetName = $('.WanFa_TableA h3:contains(' + playName + ')');
+
+                    $.each(targetName, function (index, item) {
+                        var curItem = $(item);
+                        var itemName = curItem.html();
+                        if (itemName != playName) return true;
+
+                        target = curItem.parent().next();
+                        var html = target.html();
+                        if (html == '') {
+                            target.html(betNum);
+                        }
+                        else {
+                            target.html(html + '|' + betNum);
+                        }
+                    });
+
+                    
                 }
 
 
