--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -544,6 +544,8 @@
            pageIndex =  1,
            pageSize = 10;
         $(function () {
+
+            $(".info_hdNav_cai_lhs li").unbind("click");
             calcNavScoll();
 
             initnews();
