--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -7531,25 +7531,29 @@ i.icon_star {
         box-sizing: border-box;
     }
 
-    .gallery-search input {
+    /*.gallery-search input {
         width: 100%;
-    }
+    }*/
 
 input[type=search] {
     border-radius: 5px;
     border: 1px solid #ebebeb;
     /*必须对默认的border:2px inset覆盖，要不然下面的样式也是白搭*/
-    width: 95%;
+    width: 96%;
+    padding:0 10px;
     height: 30px;
-    outline: none;
-    padding: 0 10px;
-    margin: 0 2.6666666%;
+    display:block;
+    margin:0 auto;
+
 }
 
     input[type=search]::-webkit-input-placeholder {
         color: #999;
         text-align: center;
     }
+
+
+    .Ser_SouSuoIpt{width:86%;display:block;border:1px solid #ebebeb;border-radius:5px;margin:0 auto;padding:0 0 0 30px;height:30px;font-size:14px; color:#666; background:#fff url(../images/59_1.png) no-repeat 8px center; background-size:14px;}
 
 
 /*
