--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -653,9 +653,9 @@
                 html='<div class="GG_Box ">'
 	  +'<a href="'+item.TransferUrl+'">'
     	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
-       + '<div class="GG_BbtFont">'
-        	+'<b>广告</b>'
-          +  '<span>'+item.Company+'</span>'
+       + ' <div class="newstime">'
+        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
        + '</div>'
          +'</a>'
             +'</div>'
@@ -673,10 +673,10 @@
 	+'<a href="'+item.TransferUrl+'">'
     	+'<div class="GG_B2Left f-l">'
         	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
-          +  '<div class="GG_BbtFont">'
-            +   ' <b>广告</b>'
-           +    ' <span>'+item.Company+'</span>'
-          +  '</div>'
+           + ' <div class="newstime">'
+        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       + '</div>'
        + '</div>'
     	+'<div class="GG_B2Right">'+img+'</div>'
     +'</a>'
@@ -693,10 +693,10 @@
 	+'<a href="'+item.TransferUrl+'">'
     	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
        + '<div class="GG_B4Tu">'+img+'</div>'
-       + '<div class="GG_BbtFont">'
-      +  	'<b>广告</b>'
-      +      '<span>'+item.Company+'</span>'
-     +   '</div>'
+        + ' <div class="newstime">'
+        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       + '</div>'
    + '</a>'
 +'</div>'
 
@@ -719,10 +719,10 @@
             + '<div style="clear:both;"></div>'
         + '</ul>'
 
-        + '<div class="GG_BbtFont">'
-        	+ '<b>广告</b>'
-            + '<span>'+item.Company+'</span>'
-        + '</div>'
+         + ' <div class="newstime">'
+        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       + '</div>'
     + '</a>'
 + '</div>'
             }else if(item.ThumbStyle==4)
@@ -732,8 +732,8 @@
                 {
                     img='<img src="'+item.ThumbList[0]+'"  class="GG_B5Tu">'
                 }
-                html='  <div class="GG_Box GG_Box1 GG_Box2 PD3">'
-               + ' <a href="'+item.TransferUrl+'">'+img+'</a>'
+                html='  <div class="GG_Box GG_Box1 PD3">'
+               + ' <a href="' + item.TransferUrl + '">'+img+'</a>'
                + '   </div>'
             }
 
