--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -7,6 +7,7 @@
     int count = 0;
 
     int lType = ViewBag.lType;
+    string title = "计划-" + ViewBag.lotteryName;
 
 }
 
@@ -22,14 +23,17 @@
     <script src="/js/jquery-1.8.3.min.js"></script>
     <script src="/js/function.js"></script>
     <script src="/js/runTime2.js"></script>
+
+    <script src="~/js/yjp.js"></script>
 </head>
 
 <body style="background:#fff;">
     <input type="hidden" id="lType" value="@lType" />
 
     <header class="hjc_header">
-        <h3 class="hjc_logo">@ViewBag.siteTitle</h3>
+        <h3 class="hjc_logo">@title</h3>
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
+        <a href="javascript:;" class="ZX_Sidebar"></a>
     </header>
 
     <div class="Plan_header" style="margin-top: 50px;">
@@ -294,7 +298,111 @@
     </div>
 
 
-
+    <!--侧边栏-->
+    <div class="ZX_CLBox">
+        <div class="CLB_YY"></div>
+        <div class="CLB_con">
+            <ul class="CLB_cNav">
+                <!--cNav_current-->
+                <li>
+                    <a href="/Home/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/w6_1.png"></dt>
+                            <dd>
+                                <p>首页</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Open">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/w6_2.png"></dt>
+                            <dd>
+                                <p>开奖</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                @*<li>
+                        <a href="JavaScript:;">
+                            <dl class="cNav_Dl">
+                                <dt><img src="/images/w6_4.png"></dt>
+                                <dd>
+                                    <p>走势</p>
+                                    <img src="/images/w7.png">
+                                    <div style="clear:both;"></div>
+                                </dd>
+                            </dl>
+                        </a>
+                    </li>*@
+                <li>
+                    <a href="/Home/Plan">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/w6_3.png"></dt>
+                            <dd>
+                                <p>计划</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/List/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/grids_icon_04.png"></dt>
+                            <dd>
+                                <p>排行</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/w6_5.png"></dt>
+                            <dd>
+                                <p>聊天</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/List/Expert">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/grids_icon_06.png"></dt>
+                            <dd>
+                                <p>高手</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/News/Index/2">
+                        <dl class="cNav_Dl">
+                            <dt><img src="/images/grids_icon_07.png"></dt>
+                            <dd>
+                                <p>资讯</p>
+                                <img src="/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
 </body>
 
