添加百度统计代码

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Amount/BindingBankCard.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Amount/BindingBankCard.cshtml
@@ -20,6 +20,8 @@
     <title>绑定银行卡</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script type="text/javascript" src="/js/jquery.js"></script>
+
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
