--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Comment/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Comment/Index.cshtml
@@ -19,6 +19,7 @@
     <script src="~/js/luo/jquery.mCustomScrollbar.min.js"></script>
     <script src="~/js/luo/jquery.emoji.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body style="overflow: hidden">
     <header class="hjc_header">
