--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -23,6 +23,7 @@
             display: none;
         }
     </style>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body style="background:#f3f4f4;">
     <header class="hjc_header">
