--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
@@ -123,6 +123,7 @@
 
 
     </script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
