--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -49,6 +49,7 @@
     <script type="text/javascript" src="~/js/yjp.js"></script>
     <script type="text/javascript" src="~/js/runTime2.js"></script>
 
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body style="background:#F4F4F5;">
     <input type="hidden" id="lType" value="@lType" />
