--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="~/js/yjp.js"></script>
     <script type="text/javascript" src="~/js/luo/hammer.min.js"></script>
     <script type="text/javascript" src="~/js/luo/picmax.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script>
         $(function ()
         {
