--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="~/js/yjp.js"></script>
     <script type="text/javascript" src="~/js/luo/dropload.min.js"></script>
     <script type="text/javascript" src="~/js/dialog.min.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
 
 </head>
