--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Follow.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Follow.cshtml
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="~/js/luo/dropload.min.js"></script>
     <script src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
     <script>
         var pageIndex = 1,
