--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set111.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set111.cshtml
@@ -15,6 +15,7 @@
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/kcp/cropbox.js"></script>
     <script src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
 </head>
 
