--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TaskRule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TaskRule.cshtml
@@ -13,6 +13,7 @@
     <title>规则说明-赚钱任务</title>
     <link href="~/css/style.css" rel="stylesheet" />
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body>
     @if (platForm != 1)
