--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -27,9 +27,8 @@
     <script type="text/javascript" src="/js/dialog.min.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/runTime2.js"></script>
-    <script type="text/javascript" src="/js/plan_scroll1.js">
-
-    </script>
+    <script type="text/javascript" src="/js/plan_scroll1.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script>
         $(function () {
             var cur = GetQueryString("cur");
