--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -25,6 +25,7 @@
     <script src="/js/runTime2.js"></script>
 
     <script src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#fff;">
