--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/js/public.js"></script>
     <script type="text/javascript" src="/js/bet.js"></script>
     <script type="text/javascript" src="/js/runTime2.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body style="background:#F4F4F5;">
     <input type="hidden" value="@ViewBag.lType" id="lType" />
