--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.title1</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body>
     @if (platForm != 1)
