--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
@@ -46,6 +46,7 @@
                 border: 1px solid #999;
             }
     </style>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body>
     <div class="_container clear">
