--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Amount/ExtractCashSuccess.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Amount/ExtractCashSuccess.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>提现成功</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
