--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
@@ -13,6 +13,8 @@
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/yjp.js"></script>
 
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+
     <script>
         $(function () {
             login();
