--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
@@ -58,6 +58,7 @@
 
 
     </script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
