--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/New.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/New.cshtml
@@ -8,6 +8,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>rank</title>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body>
     <div>
