--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
@@ -22,6 +22,7 @@
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <script src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
     <script>
         $(function () {
