--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/paper.css" />
     <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
     <script src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script>
         $(function ()
         {
