--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
@@ -16,6 +16,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body>
