--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
 
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="~/js/runTime2.js"></script>
 </head>
 
