--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/CommissionRules.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/CommissionRules.cshtml
@@ -16,6 +16,7 @@
 
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body>
