--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <script src="~/js/jquery-1.8.3.min.js"></script>
 
-    <script type="text/javascript" src="js~/yjp.js"></script>
+    <script type="text/javascript" src="/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
 </head>
 
