--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyAchievement.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyAchievement.cshtml
@@ -15,6 +15,7 @@
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="~/js/luo/mescroll.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script>
 
 
