--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
@@ -14,6 +14,7 @@
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
     <script>
         $(function () {
