--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="~/js/zcircleMove.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
