--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TransactionRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TransactionRecord.cshtml
@@ -13,6 +13,7 @@
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="~/js/luo/mescroll.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
