--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/luo/jquery.emoji.min.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#eee;">
