--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
@@ -13,6 +13,7 @@
     <link href="~/css/mescroll.min.css" rel="stylesheet" />
     <script type="text/javascript" src="~/js/jquery.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script>
         $(function () {
             getlist(0);
