--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="~/js/jquery.js"></script>
     <script src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 
     <script>
 
