--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/TouchSlide.1.1.js"></script>
     <script type="text/javascript" src="~/js/runTime2.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script>
         function unorfollow(obj, follow_uid) {
 
