--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Recharge/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Recharge/Index.cshtml
@@ -10,6 +10,7 @@
     <title>个人中心-充值</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
