--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="/js/function.js"></script>
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body style="background: #F4F4F5;">
     <header class="hjc_header">
