--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoom.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoom.cshtml
@@ -10,6 +10,7 @@
     <title>首页</title>
     <link rel="stylesheet" href="/css/Chat/base.css" />
     <link rel="stylesheet" href="/css/Chat/index.css" />
+    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 <body>
     <!--页面内容-->
