--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -58,13 +58,13 @@
         <div class="Personal_hdInfo2">
             <ul class="Per_If2Ul">
                 <li>
-                    <a href="javascript:;">
+                    <a href="/Recharge/Index">
                         <h3>@Model.Coin</h3>
                         <p>金币</p>
                     </a>
                 </li>
                 <li>
-                    <a href="javascript:;">
+                    <a href="/Personal/MyIntegral">
                         <h3>@Model.Integral</h3>
                         <p>积分</p>
                     </a>
